--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="chat-container">
         <div class="sidebar">
-            <div class="logo">ChatApp</div>
+            <div class="logo">lunahackerApp</div>
             <ul class="contact-list">
-                <li class="contact active">User 1</li>
-                <li class="contact">User 2</li>
-                <li class="contact">User 3</li>
+                <li class="contact active">User 1ayaaangg</li>
+                <li class="contact">User 2apaa ayaaang</li>
+                <li class="contact">User 3kangeeen</li>
             </ul>
         </div>
         <div class="chat-section">
