--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="sidebar">
             <div class="logo">lunahackerApp</div>
             <ul class="contact-list">
-                <li class="contact active">User 1ayaaangg</li>
-                <li class="contact">User 2apaa ayaaang</li>
-                <li class="contact">User 3kangeeen</li>
+                <li class="contact active">ayaaangg</li>
+                <li class="contact">apaa ayaaang</li>
+                <li class="contact">kangeeen</li>
             </ul>
         </div>
         <div class="chat-section">
@@ -22,9 +22,9 @@
                 <div class="chat-options">...</div>
             </div>
             <div class="chat-body">
-                <div class="message received">Hello!</div>
-                <div class="message sent">Hi, how are you?</div>
-                <div class="message received">I'm good, thanks!</div>
+                <div class="message received">ayaaaanggg !!!!</div>
+                <div class="message sent">apa ayaaang</div>
+                <div class="message received">SHUBULLL</div>
             </div>
             <div class="chat-input">
                 <input type="text" placeholder="Type a message...">
