--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="chat-section">
             <div class="chat-header">
-                <div class="chat-title">User 1</div>
-                <div class="chat-options">...</div>
+                <div class="chat-title">ayaaaangg</div>
+                <div class="chat-options">babi</div>
             </div>
             <div class="chat-body">
                 <div class="message received">ayaaaanggg !!!!</div>
